--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
       href="https://fonts.googleapis.com/css?family=Poppins:200,400,800&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="style.css" />
 
     <title>To-do-list</title>
@@ -17,6 +22,7 @@
       <h1>To Do List</h1>
       <div class="tasks">
         <div class="task">
+          <input type="checkbox" name="completed" id="completed" />
           <p>This is the first test task</p>
         </div>
       </div>
