Add new task functionality and readme

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   </head>
   <body>
     <main class="wrapper">
-      <h1>To Do List</h1>
+      <h1 id="task-heading">To Do List</h1>
       <ul class="tasks">
         <li class="task">
-          <input type="checkbox" name="completed" id="completed" />
+          <input type="checkbox" class="checkbox" />
           <p>This is the first test task</p>
           <div class="modify">
             <i class="small material-icons edit">edit</i>
@@ -30,23 +30,30 @@
           </div>
         </li>
         <li class="task">
-          <input type="checkbox" name="completed" id="completed" />
+          <input type="checkbox" class="checkbox" />
           <p>This is the second test task</p>
           <div class="modify">
             <i class="small material-icons edit">edit</i>
             <i class="small material-icons delete">delete</i>
           </div>
         </li>
-        <div class="add-task">
-          <button class="add-task-btn">Add a new task</button>
-        </div>
       </ul>
+      <div class="add-task">
+        <button class="add-task-btn">Add a new task</button>
+      </div>
     </main>
-    <div class="edit-modal-container">
-      <div class="edit-modal">
+    <div class="edit-modal-container modal-container">
+      <div class="edit-modal modal">
         <h2>Edit Task</h2>
-        <input type="text" class="edit-modal-input" />
+        <input type="text" class="edit-modal-input modal-input" />
         <button class="save">Save Todo</button>
+      </div>
+    </div>
+    <div class="add-modal-container modal-container">
+      <div class="add-modal modal">
+        <h2>Add new task</h2>
+        <input type="text" class="add-modal-input modal-input" />
+        <button class="save">Add to the list</button>
       </div>
     </div>
 
