Refactoring to allow local storage

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main class="wrapper">
       <h1 id="task-heading">To Do List</h1>
       <ul class="tasks">
-        <li class="task">
+        <!-- <li class="task">
           <input type="checkbox" class="checkbox" />
           <p>This is the first test task</p>
           <div class="modify">
@@ -36,7 +36,7 @@
             <i class="small material-icons edit">edit</i>
             <i class="small material-icons delete">delete</i>
           </div>
-        </li>
+        </li> -->
       </ul>
       <div class="add-task">
         <button class="add-task-btn">Add a new task</button>
