Complete local storage connectivity, edit needs work

--- a/index.html
+++ b/index.html
@@ -20,24 +20,7 @@
   <body>
     <main class="wrapper">
       <h1 id="task-heading">To Do List</h1>
-      <ul class="tasks">
-        <!-- <li class="task">
-          <input type="checkbox" class="checkbox" />
-          <p>This is the first test task</p>
-          <div class="modify">
-            <i class="small material-icons edit">edit</i>
-            <i class="small material-icons delete">delete</i>
-          </div>
-        </li>
-        <li class="task">
-          <input type="checkbox" class="checkbox" />
-          <p>This is the second test task</p>
-          <div class="modify">
-            <i class="small material-icons edit">edit</i>
-            <i class="small material-icons delete">delete</i>
-          </div>
-        </li> -->
-      </ul>
+      <ul class="tasks"></ul>
       <div class="add-task">
         <button class="add-task-btn">Add a new task</button>
       </div>
