Work on search, currently not working

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   <body>
     <main class="wrapper">
       <h1 id="task-heading">To Do List</h1>
+      <div class="controls">
+        <input type="text" id="search-input" placeholder="Search Task List" />
+      </div>
       <ul class="tasks"></ul>
       <div class="add-task">
         <button class="add-task-btn">Add a new task</button>
@@ -29,7 +32,7 @@
       <div class="edit-modal modal">
         <h2>Edit Task</h2>
         <input type="text" class="edit-modal-input modal-input" />
-        <button class="save">Save Todo</button>
+        <button class="save">Save task to list</button>
       </div>
     </div>
     <div class="add-modal-container modal-container">
